<resources>
    <string name="app_name">Project1</string>

    <string name="action_sign_in_short">Register</string>

    <string name="email">Email</string>

    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>

    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>

    <string name="change_email">Change Email</string>

    <string name="change_password">Change Password</string>

    <string name="send_password_reset_email">Send Password reset email</string>

    <string name="remove_user">Remove user</string>

    <string name="new_pass">New Password</string>

    <string name="title_activity_profile">Firebase</string>

    <string name="title_activity_login">Sign in</string>

    <string name="hint_email">Email</string>

    <string name="hint_password">Password</string>

    <string name="hint_name">Fullname</string>

    <string name="btn_login">LOGIN</string>

    <string name="prompt_password">Please enter your password</string>

    <string name="btn_link_to_register">Not a member? Get registered now!</string>

    <string name="btn_link_to_login">Already registered. Login Me!</string>

    <string name="title_activity_reset_password">ResetPasswordActivity</string>

    <string name="btn_forgot_password">Forgot your password?</string>

    <string name="btn_reset_password">Reset Password</string>


    -
    <string name="btn_back">

</string>

    <string name="hint_new_email">New Email</string>

    <string name="btn_change">Change</string>

    <string name="btn_send">Send</string>

    <string name="btn_remove">Remove</string>

    <string name="btn_sign_out">Sign Out</string>

    <string name="lbl_forgot_password">Forgot password?</string>

    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <string name="email_id">Email ID</string>
    <string name="irrigation_system">Irrigation_System</string>
    <string name="auto_irrigation">Auto_Irrigation</string>
    <string name="fullname">Fullname</string>
    <string name="address">Address</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="refers">Refers</string>
    <string name="logout">Logout</string>
    <string name="contact_number">Contact Number</string>
    <string name="sensors">Sensors</string>
    <string name="update">Update</string>
    <string name="number">Number</string>
    <string name="new_password">New Password</string>
    <string name="password">Password</string>
    <string name="soil_moisture_sensor">Soil Moisture Sensor</string>
    <string name="temperature_sensor">Temperature Sensor</string>
    <string name="system_status">System Status</string>
</resources>
