<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/notification"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/notification">
    </item>
    <item
        android:id="@+id/profile"
        android:orderInCategory="200"
        app:showAsAction="never"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/profile">
    </item>

    <item
        android:id="@+id/sensors"
        android:orderInCategory="200"
        app:showAsAction="never"
        android:title="@string/sensors">
    </item>

    <item
        android:id="@+id/logout"
        android:orderInCategory="300"
        app:showAsAction="never"
        android:title="@string/logout">
    </item>

</menu>