<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:padding="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/irrigation">

        <ImageView
            android:id="@+id/ivProfilePic"
            android:layout_width="149dp"
            android:layout_height="89dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="-50dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.051"
            app:srcCompat="@mipmap/ic_launcher" />

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textColor="@android:color/black"
            android:maxLines="1"
            android:inputType="text"
            android:hint="@string/fullname"
            android:id="@+id/fullname"/>


        <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textColor="@android:color/black"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:id="@+id/email"/>

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textColor="@android:color/black"
            android:maxLines="1"
            android:inputType="textPassword"
            android:hint="@string/hint_password"
            android:id="@+id/password"
            android:imeOptions="actionUnspecified"
            android:imeActionId="@android:integer/config_shortAnimTime"
            android:focusableInTouchMode="true"/>
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textColor="@android:color/black"
            android:maxLines="1"
            android:inputType="text"
            android:hint="@string/address"
            android:id="@+id/address"/>
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textColor="@android:color/black"
            android:maxLines="1"
            android:inputType="number"
            android:hint="@string/contact_number"
            android:id="@+id/mobile"/>

        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@color/colorAccent"
            android:textColor="@android:color/black"
            android:id="@+id/sign_up_button"
            android:textStyle="bold"
            android:text="@string/action_sign_in_short"
            android:layout_marginTop="16dp"
            style="?android:textAppearanceSmall"/>

        <Button
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:background="@null"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:id="@+id/btn_reset_password"
            android:text="@string/btn_forgot_password"
            android:layout_marginTop="20dip"
            android:textAllCaps="false"/>

        <!-- Link to Login Screen -->


        <Button
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:background="@null"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:id="@+id/sign_in_button"
            android:text="@string/btn_link_to_login"
            android:layout_marginTop="20dip"
            android:textAllCaps="false"
            android:textSize="15sp"/>

    </LinearLayout>

    <ProgressBar
        android:layout_height="100dp"
        android:layout_width="100dp"
        tools:ignore="MissingConstraints"
        android:layout_gravity="center|bottom"
        android:id="@+id/progressBar"
        tools:layout_editor_absoluteY="162dp"
        tools:layout_editor_absoluteX="142dp"
        android:visibility="gone"/>


</androidx.constraintlayout.widget.ConstraintLayout>