<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/poject"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="99dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="131dp"
        android:layout_marginLeft="131dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="130dp"
        android:layout_marginRight="130dp"
        app:srcCompat="@drawable/polyhouse"></ImageView>

    <EditText
        android:id="@+id/old_email"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="29dp"
        android:layout_marginRight="29dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="82dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/newPassword"
        android:layout_marginLeft="21dp"
        android:layout_marginBottom="29dp"
        android:layout_toRightOf="@+id/progressBar"
        android:focusableInTouchMode="true"
        android:hint="@string/prompt_password"
        android:imeActionId="@android:integer/config_shortAnimTime"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        tools:layout_editor_absoluteX="126dp"
        tools:layout_editor_absoluteY="125dp" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/changePass"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="21dp"
        android:layout_marginBottom="35dp"
        android:focusableInTouchMode="true"
        android:hint="@string/new_pass"
        android:imeActionId="@android:integer/config_shortAnimTime"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        tools:layout_editor_absoluteX="106dp"
        tools:layout_editor_absoluteY="168dp" />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/remove"
        tools:layout_editor_absoluteX="199dp"
        tools:layout_editor_absoluteY="211dp"
        android:id="@+id/changePass"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:text="@string/btn_change"
        android:background="@color/colorPrimaryDark"
        style="?android:textAppearanceSmall"/>

    <ProgressBar
        android:layout_height="0dp"
        android:layout_width="0dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        android:id="@+id/progressBar"
        android:visibility="gone"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_above="@+id/change_password_button"
        tools:layout_editor_absoluteX="199dp"
        tools:layout_editor_absoluteY="259dp"
        android:id="@+id/remove"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:text="@string/btn_remove"
        android:background="@color/colorPrimaryDark"
        style="?android:textAppearanceSmall"
        android:layout_alignLeft="@+id/changePass"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:layout_above="@+id/remove_user_button"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="312dp"
        android:id="@+id/change_password_button"
        android:textStyle="bold"
        android:text="@string/change_password"
        style="?android:textAppearanceSmall"
        android:layout_alignLeft="@+id/remove_user_button"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:layout_above="@+id/sign_out"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="408dp"
        android:id="@+id/remove_user_button"
        android:textStyle="bold"
        android:text="@string/remove_user"
        style="?android:textAppearanceSmall"
        android:layout_alignLeft="@+id/sign_out"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:layout_centerHorizontal="true"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="456dp"
        android:id="@+id/sign_out"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:text="@string/btn_sign_out"
        android:background="@color/colorPrimary"
        style="?android:textAppearanceSmall"
        android:layout_alignParentBottom="true"/>

    <TextView
        android:id="@+id/useremail"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="39dp"
        android:layout_marginTop="98dp"
        android:layout_marginBottom="590dp"
        android:gravity="center"
        android:hint="@string/auto_irrigation"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="39dp" />


</RelativeLayout>

